// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Health display Health page based on config and status 1`] = `
<div>
  <h5
    aria-label="breadcrumb"
    class=""
  >
    <ol
      class="breadcrumb"
    >
      <span
        aria-current="page"
        class="active breadcrumb-item"
      >
        Home
      </span>
    </ol>
  </h5>
  <div
    class="row"
  >
    <label
      class=""
    >
      <span>
        OIBus overview
         
        <svg
          class="oi-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z"
          />
        </svg>
      </span>
    </label>
  </div>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        class="tight text-success col"
      >
        <div
          class="oi-box d-flex align-items-center"
        >
          <a
            href="/north/c"
          >
            <div>
              c
            </div>
            <div>
              (Console)
            </div>
          </a>
        </div>
      </div>
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box d-flex align-items-center"
        >
          <a
            href="/north/monoiconnect"
          >
            <div>
              monoiconnect
            </div>
            <div>
              (OIConnect)
            </div>
          </a>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="tight col"
      >
        <a
          href="/engine"
        >
          <div
            class="oi-box text-success d-flex align-items-center"
          >
            Engine
          </div>
        </a>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/CSVServer"
          >
            <div>
              CSVServer
            </div>
            <div>
              (CSV)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-outline-secondary btn-sm"
            type="button"
          >
            Points (2)
          </button>
        </div>
      </div>
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/MQTTServer"
          >
            <div>
              MQTTServer
            </div>
            <div>
              (MQTT)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-outline-secondary btn-sm"
            type="button"
          >
            Points (2)
          </button>
        </div>
      </div>
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/SimulationServer"
          >
            <div>
              SimulationServer
            </div>
            <div>
              (OPCUA)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-outline-secondary btn-sm"
            type="button"
          >
            Points (2)
          </button>
        </div>
      </div>
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/SimulationServerBis"
          >
            <div>
              SimulationServerBis
            </div>
            <div>
              (OPCUA)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-outline-secondary btn-sm"
            type="button"
          >
            Points (1)
          </button>
        </div>
      </div>
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/PLC-35"
          >
            <div>
              PLC-35
            </div>
            <div>
              (Modbus)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-outline-secondary btn-sm"
            type="button"
          >
            Points (5)
          </button>
        </div>
      </div>
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/PLC-42"
          >
            <div>
              PLC-42
            </div>
            <div>
              (Modbus)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-outline-secondary btn-sm"
            type="button"
          >
            Points (2)
          </button>
        </div>
      </div>
      <div
        class="tight text-success col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/FolderScanner"
          >
            <div>
              FolderScanner
            </div>
            <div>
              (FolderScanner)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-secondary btn-sm disabled"
            disabled=""
          >
            File
          </button>
        </div>
      </div>
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/SQLDbToFile"
          >
            <div>
              SQLDbToFile
            </div>
            <div>
              (SQLDbToFile)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-secondary btn-sm disabled"
            disabled=""
          >
            File
          </button>
        </div>
      </div>
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/OPC-HDA"
          >
            <div>
              OPC-HDA
            </div>
            <div>
              (OPCHDA)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-outline-secondary btn-sm"
            type="button"
          >
            Points (3)
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <label
      class=""
    >
      <span>
        OIBus health status
         
        <svg
          class="oi-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z"
          />
        </svg>
      </span>
    </label>
  </div>
  <div
    class="row"
  >
    <table
      class="table table-sm table-striped table-hover"
    >
      <thead>
        <tr />
      </thead>
      <tbody />
    </table>
  </div>
</div>
`;

exports[`Health display Health page based on config and status 2`] = `
<div>
  <h5
    aria-label="breadcrumb"
    class=""
  >
    <ol
      class="breadcrumb"
    >
      <span
        aria-current="page"
        class="active breadcrumb-item"
      >
        Home
      </span>
    </ol>
  </h5>
  <div
    class="row"
  >
    <label
      class=""
    >
      <span>
        OIBus overview
         
        <svg
          class="oi-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z"
          />
        </svg>
      </span>
    </label>
  </div>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        class="tight text-success col"
      >
        <div
          class="oi-box d-flex align-items-center"
        >
          <a
            href="/north/c"
          >
            <div>
              c
            </div>
            <div>
              (Console)
            </div>
          </a>
        </div>
      </div>
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box d-flex align-items-center"
        >
          <a
            href="/north/monoiconnect"
          >
            <div>
              monoiconnect
            </div>
            <div>
              (OIConnect)
            </div>
          </a>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="tight col"
      >
        <a
          href="/engine"
        >
          <div
            class="oi-box text-success d-flex align-items-center"
          >
            Engine
          </div>
        </a>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/CSVServer"
          >
            <div>
              CSVServer
            </div>
            <div>
              (CSV)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-outline-secondary btn-sm"
            type="button"
          >
            Points (2)
          </button>
        </div>
      </div>
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/MQTTServer"
          >
            <div>
              MQTTServer
            </div>
            <div>
              (MQTT)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-outline-secondary btn-sm"
            type="button"
          >
            Points (2)
          </button>
        </div>
      </div>
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/SimulationServer"
          >
            <div>
              SimulationServer
            </div>
            <div>
              (OPCUA)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-outline-secondary btn-sm"
            type="button"
          >
            Points (2)
          </button>
        </div>
      </div>
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/SimulationServerBis"
          >
            <div>
              SimulationServerBis
            </div>
            <div>
              (OPCUA)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-outline-secondary btn-sm"
            type="button"
          >
            Points (1)
          </button>
        </div>
      </div>
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/PLC-35"
          >
            <div>
              PLC-35
            </div>
            <div>
              (Modbus)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-outline-secondary btn-sm"
            type="button"
          >
            Points (5)
          </button>
        </div>
      </div>
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/PLC-42"
          >
            <div>
              PLC-42
            </div>
            <div>
              (Modbus)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-outline-secondary btn-sm"
            type="button"
          >
            Points (2)
          </button>
        </div>
      </div>
      <div
        class="tight text-success col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/FolderScanner"
          >
            <div>
              FolderScanner
            </div>
            <div>
              (FolderScanner)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-secondary btn-sm disabled"
            disabled=""
          >
            File
          </button>
        </div>
      </div>
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/SQLDbToFile"
          >
            <div>
              SQLDbToFile
            </div>
            <div>
              (SQLDbToFile)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-secondary btn-sm disabled"
            disabled=""
          >
            File
          </button>
        </div>
      </div>
      <div
        class="tight text-muted col"
      >
        <div
          class="oi-box"
        >
          <a
            href="/south/OPC-HDA"
          >
            <div>
              OPC-HDA
            </div>
            <div>
              (OPCHDA)
            </div>
          </a>
          <button
            class="inline-button autosize oi-points-button btn btn-outline-secondary btn-sm"
            type="button"
          >
            Points (3)
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <label
      class=""
    >
      <span>
        OIBus health status
         
        <svg
          class="oi-icon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z"
          />
        </svg>
      </span>
    </label>
  </div>
  <div
    class="row"
  >
    <table
      class="table table-sm table-striped table-hover"
    >
      <thead>
        <tr />
      </thead>
      <tbody>
        <tr>
          <td>
            Version
          </td>
          <td>
            x.x.x
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Architecture
          </td>
          <td>
            x64
          </td>
          <td />
        </tr>
        <tr>
          <td>
            CurrentDirectory
          </td>
          <td>
            /Users/jfh/Work/OIBus/tests
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Node Version
          </td>
          <td>
            v12.14.0
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Executable
          </td>
          <td>
            /usr/local/bin/node
          </td>
          <td />
        </tr>
        <tr>
          <td>
            ConfigFile
          </td>
          <td>
            /Users/jfh/Work/OIBus/tests/oibus.json
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Copyright
          </td>
          <td>
            (c) Copyright 2019 Optimistik, all rights reserved.
          </td>
          <td />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
